Initial import process ui/controllers.

--- a/app/lib/ui/metapolator/master-panel/master-panel.less
+++ b/app/lib/ui/metapolator/master-panel/master-panel.less
@@ -1,4 +1,5 @@
 @import "master/master";
+@import "import/import";
 
 .list-container {
     width: 100%;
@@ -35,6 +36,9 @@
 .ul-master {
     list-style: outside none none;
     padding: 0;
+}
+
+.li-sequence:last-child .ul-master {
     margin-bottom: 10px;
 }
 
