--- a/app/lib/ui/metapolator/metadata-panel/metadata-panel.less
+++ b/app/lib/ui/metapolator/metadata-panel/metadata-panel.less
@@ -10,7 +10,7 @@ mtk-metadata-panel .under-construction {
 }
 
 #progressbar {
-    background: #c9eac8;
+    background: @mtk-progress-bar-color;
     height: 100%;
     width: 0;
 }
