Show dialog when masters are not compatible.

--- a/app/lib/ui/metapolator/app.less
+++ b/app/lib/ui/metapolator/app.less
@@ -216,6 +216,8 @@ mtk-panel.without-body {
     background: #fff;
     box-shadow: 0 0 20px rgba(0,0,0,0.6);
     width: 400px;
+    max-height: 80%;
+    overflow: auto;
     min-height: 100px;
     left: ~"calc(50% - 200px)";
 }
